[package]
authors = ["Gero Gerke <11deutron11@gmail.com>"]
description = "InfluxDB Driver for Rust"
edition = "2018"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
keywords = ["influxdb", "database", "influx"]
license = "MIT"
name = "influxdb"
readme = "README.md"
repository = "https://github.com/influxdb-rs/influxdb-rust"
version = "0.7.2"
[dependencies]
csv = "*"
log = "0.4.19"
futures-util = "0.3.17"
http = "0.2.4"
lazy-regex = "3.1"
thiserror = "1.0"

[dependencies.chrono]
default-features = false
features = ["serde"]
version = "0.4.23"

[dependencies.influxdb_derive]
optional = true
version = "0.5.1"

[dependencies.reqwest]
default-features = false
optional = true
version = "0.11.4"

[dependencies.serde]
optional = true
version = "1.0.186"

[dependencies.serde_derive]
optional = true
version = "1.0.186"

[dependencies.serde_json]
optional = true
version = "1.0.48"

[dependencies.surf]
default-features = false
optional = true
version = "2.2.0"

[dev-dependencies]
indoc = "1.0"

[dev-dependencies.async-std]
features = ["attributes", "tokio02", "tokio1"]
version = "1.6.5"

[dev-dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.7"

[features]
curl-client = ["surf", "surf/curl-client"]
default = ["serde", "reqwest-client-rustls"]
derive = ["dep:influxdb_derive"]
h1-client = ["surf", "surf/h1-client"]
h1-client-rustls = ["surf", "surf/h1-client-rustls"]
hyper-client = ["surf", "surf/hyper-client"]
reqwest-client-native-tls = ["reqwest", "reqwest/native-tls-alpn"]
reqwest-client-native-tls-vendored = ["reqwest", "reqwest/native-tls-vendored"]
reqwest-client-rustls = ["reqwest", "reqwest/rustls-tls-webpki-roots"]
serde = ["dep:serde", "dep:serde_derive", "dep:serde_json"]
wasm-client = ["surf", "surf/wasm-client"]
